test/fixtures/source-map/output/source_map_throw_icu.snapshot
*icu.jsx:3
    ("ã‚ ğŸ• ğŸ•", throw Error("an error"));
     ^


Error: an error
    at Object.createElement (*icu.jsx:3:23)
    at Object.<anonymous> (*icu.jsx:9:5)

Node.js *
